# EmbeddedProjects

./: .gitignore
Arcanet/: Arcanet.ino  README.md  keywords.txt  library.properties
Arcanet/examples/Simple/: Simple.ino
Arcanet/src/: Arcanet.cpp  Arcanet.h
Archive/ESP_NOW_Mesh/: ESP_NOW_Mesh.ino
ESP_NOW_Mesh/: ESP_NOW_Mesh.ino
Lantern/: Arcanet.ino
LigtKlokXI/: .cproject  .project  CMakeLists.txt
LigtKlokXI/main/: CMakeLists.txt  main.c
LigtKlokXI/main/ui/screens/: ui_Screen1.c  ui_Screen1.h
LuxArcana/: LuxArcana.ino
LuxArcana/src/: Arcanet.cpp  Arcanet.h
ProjectBeacon/: ProjectBeacon.ino
ProjectBeacon/src/: Arcanet.h
